# meka-ros-pkg

dold_button_controller/: CMakeLists.txt  package.xml
dold_button_controller/scripts/: dold_button_controller.py
force_helper/: CMakeLists.txt  package.xml
force_helper/scripts/: force_helper_node.py
hand_over/: CMakeLists.txt  package.xml
hand_over/action/: HandOver.action
hand_over/scripts/: hand_over_node.py
hand_over_msgs/: CMakeLists.txt  package.xml
hand_over_msgs/action/: HandOver.action
hand_shaker/: CMakeLists.txt  package.xml
hand_shaker/scripts/: hand_shaker.py  hand_shaker_node.py
hand_shaker_msgs/: CMakeLists.txt  package.xml
hand_shaker_msgs/action/: ShakeHand.action
hri_manager/: CMakeLists.txt  package.xml
hri_manager/scripts/: hri_manager.py
hri_msgs/: CMakeLists.txt  README.md  package.xml
hri_msgs/action/: Hri.action
hri_msgs/msg/: HriEvent.msg  HriInteraction.msg  HriTask.msg  HriTaskPhase.msg  HriTaskResult.msg
m3_msgs/: CMakeLists.txt
m3kinect/: CMakeLists.txt
meka_bie_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
meka_bie_moveit_config/config/: fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  meka.srdf  meka_controllers.yaml  ompl_planning.yaml
meka_bringup/: CMakeLists.txt  package.xml
meka_description/: .gitignore  CMakeLists.txt  generate_commentless_bie.sh  joint_collect_pub_ucm.py  m3viz.launch  meka_ros_state.py  package.xml  test_viz_ucm.py  uja_viz.launch
meka_description/config/: gazebo_controllers.yaml  mekaviz.rviz
meka_description/gazebo/: gazebo.urdf.xacro
meka_description/launch/: m3bie.launch  m3bie_floka.launch  m3bie_gazebo.launch  m3bie_gazebo_controllers.launch  m3bie_gazebo_upload.launch  meka_upload_state_pub.launch
meka_description/meshes/high_res/S3R1/: BB2.blend
meka_description/meshes/mid_res/A2R3/: A2R3_T5_forearmRoll.dae
meka_description/meshes/mid_res/B1R1/: meka_zlift.dae
meka_description/robots/: bie.urdf  bie.urdf.xacro  bie_floka_sim.urdf.xacro  bie_headless.urdf.xacro  bie_sim.urdf.xacro  ucm.urdf.xacro
meka_description/transmissions/: A2R4_arm_defs.transmission.xacro  A2R4_l_arm_defs.transmission.xacro  A2R4_r_arm_defs.transmission.xacro  H2R4_hand.transmission.xacro  H2R4_l_hand.transmission.xacro  H2R4_r_hand.transmission.xacro  S3R1_head.transmission.xacro  T2R3_torso.transmission.xacro  Z1R2B_zlift.transmission.xacro  Z1R2_zlift.transmission.xacro  body.transmission.xacro
meka_description/urdf/: A2R4_arm_defs.urdf.xacro  A2R4_l_arm_defs.urdf.xacro  A2R4_r_arm_defs.urdf.xacro  B1R2B_defs.urdf.xacro  B1R2_defs.urdf.xacro  H2R4_hand_defs.urdf.xacro  H2R4_l_hand_defs.urdf.xacro  H2R4_r_hand_defs.urdf.xacro  MEKA_BASIC.urdf.xacro  S3R1_head_defs.urdf.xacro  S3R1_simple_head_defs.urdf.xacro  T2R3_torso_defs.urdf.xacro  Z1R2B_defs.urdf.xacro  Z1R2_zlift_defs.urdf.xacro  asus_camera.urdf.xacro  wheel_defs.urdf.xacro
meka_posture/: CMakeLists.txt  package.xml  setup.py
meka_posture_execution/: CMakeLists.txt  package.xml  setup.py
meka_posture_execution/cfg/: postures.yml
meka_posture_execution/config/: joints.yml  postures.yml  postures_nonverbal_hand_over.yml
meka_posture_execution/nodes/: execute_posture_server  posture_execution_server_rsb
meka_posture_execution/src/meka_posture_execution/: posture_execution.py  posture_execution_node.py  posture_execution_rsb.py
meka_posture_execution/src/meka_posture_execution/interfaces/: __init__.py  rsb.py  rsbServer.py
meka_posture_execution_msgs/: CMakeLists.txt  package.xml
meka_posture_recorder/: CMakeLists.txt  package.xml  setup.py
meka_posture_recorder/msg/: PostureRecordPosture.msg  PostureRecordWaypoint.msg
meka_posture_recorder/src/meka_posture_recorder/: posture_merger.py  posture_recorder.py
meka_posture_recorder/srv/: PostureRecordAddWaypoint.srv  PostureRecordGetAllPostures.srv  PostureRecordSave.srv  PostureRecordStart.msg  PostureRecordStart.srv  PostureRecordStop.srv
meka_ros_publisher/: CMakeLists.txt  package.xml  setup.py
meka_ros_publisher/nodes/: meka_ros_publisher
meka_ros_publisher/src/meka_ros_publisher/: ros_publisher.py
meka_ros_publisher/srv/: ListComponents.srv  RequestFields.srv  RequestValues.srv  UnsubscribeValues.srv
meka_stiffness_control/: CMakeLists.txt  package.xml  setup.py
meka_stiffness_control/config/: joints.yml
meka_stiffness_control/nodes/: stiffness_control_server
meka_stiffness_control/src/meka_stiffness_control/: stiffness_control.py
meka_velocity_smoother/: CMakeLists.txt  package.xml
meka_velocity_smoother/cfg/: params.cfg
meka_velocity_smoother/include/meka_velocity_smoother/: velocity_smoother_nodelet.hpp
meka_velocity_smoother/launch/: standalone.launch  test_translational_smoothing.launch  velocity_smoother.launch
meka_velocity_smoother/param/: standalone.yaml
meka_velocity_smoother/plugins/: nodelets.xml
meka_velocity_smoother/src/: velocity_smoother_nodelet.cpp
meka_velocity_smoother/test/: test_translational_input.py
rqt_m3dashboard/: CMakeLists.txt  package.xml  plugin.xml  setup.py
rqt_m3dashboard/config/: emergency_buttons_dashboard.yaml
rqt_m3dashboard/launch/: state_buttons.launch
rqt_m3dashboard/scripts/: rqt_m3dashboard
rqt_m3dashboard/src/rqt_m3dashboard/: emergency_button.py  m3dashboard.py  state_button.py  wrap_battery.py
rqt_m3dashboard/src/rqt_m3dashboard/dialogs/: __init__.py  plot_dialog.py
rqt_m3dashboard/src/rqt_m3dashboard/widgets/: __init__.py  icon_widget.py  state_button.py  wrap_battery.py
rqt_meka_posture_editor/: CMakeLists.txt  package.xml  plugin.xml  setup.py
rqt_meka_posture_editor/scripts/: rqt_meka_posture_editor
rqt_meka_posture_editor/src/rqt_meka_posture_editor/: posture_editor_gui.py
rqt_meka_posture_editor/ui/: RqtMekaPostureEditor.ui
rqt_meka_posture_recorder/: CMakeLists.txt  package.xml  plugin.xml  setup.py
rqt_meka_posture_recorder/scripts/: rqt_meka_posture_recorder
rqt_meka_posture_recorder/src/rqt_meka_posture_recorder/: posture_recorder_gui.py
rqt_meka_posture_recorder/ui/: RqtMekaPostureRecorder.ui
(+294 files in other folders)
