<?xml version="1.0"?>
<package>
  <name>dold_button_controller</name>
  <version>0.0.1</version>
  <description>The dold_button_controller package</description>

 
  <maintainer email="semeyerz@techfak.uni-bielefeld.de">Sebastian M.z.Borgsen</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
 
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>dold_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <run_depend>dold_msgs</run_depend>
  <run_depend>rospy</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
