<?xml version="1.0"?>
<package>
  <name>force_helper</name>
  <version>0.0.1</version>
  <description>The force_helper package</description>

  <maintainer email="semeyerz@techfak.uni-bielefeld.de">Sebastian Meyer zu Borgsen</maintainer>
  <license>BSD</license>
  <url type="website">https://github.com/CentralLabFacilities/meka-ros-pkg.git</url>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>message_generation</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>control_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
