<?xml version="1.0"?>
<package>
  <name>hand_shaker_msgs</name>
  <version>0.0.1</version>
  <description>The hand_shaker package</description>

  <maintainer email="gwalck@techfak.uni-bielefeld.de">Guillaume Walck</maintainer>
  <license>BSD</license>
  <url type="website">https://github.com/CentralLabFacilities/meka-ros-pkg.git</url>
  
  <author email="gwalck@techfak.uni-bielefeld.de">Guillaume Walck</author> 

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>message_generation</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>std_msgs</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
