<?xml version="1.0"?>
<package>
  <name>hri_manager</name>
  <version>0.0.1</version>
  <description>The hri_manager package</description>

  <maintainer email="gwalck@techfak.uni-bielefeld.de">Guillaume Walck</maintainer>
  <license>BSD</license>
  <url type="website">https://github.com/CentralLabFacilities/meka-ros-pkg.git</url>
  
  <author email="gwalck@techfak.uni-bielefeld.de">Guillaume Walck</author> 

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>hri_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>meka_posture</build_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>hri_msgs</run_depend>
  <run_depend>trajectory_msgs</run_depend>
  <run_depend>control_msgs</run_depend>
  <run_depend>meka_posture</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
