<?xml version="1.0"?>
<package>
  <name>hri_msgs</name>
  <version>0.0.1</version>
  <description>The hri_msgs package</description>
  <maintainer email="gwalck@techfak.uni-bielefeld.de">Guillaume Walck</maintainer>
  <license>BSD</license>
  <url type="website">https://github.com/CentralLabFacilities/meka-ros-pkg.git</url>
  
  <author email="gwalck@techfak.uni-bielefeld.de">Guillaume Walck</author> 

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>message_generation</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>grasping_msgs</build_depend>
  <build_depend>moveit_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>grasping_msgs</run_depend>
  <run_depend>moveit_msgs</run_depend>
  <run_depend>trajectory_msgs</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
