<?xml version="1.0"?>
<package>
  <name>meka_posture_recorder</name>
  <version>0.0.1</version>
  <description>Record postures as trajectory messages for groups</description>
  <maintainer email="gwalck@techfak.uni-bielefeld.de">Guillaume Walck</maintainer>
  <license>BSD</license>
  <url type="website">https://github.com/CentralLabFacilities/meka-ros-pkg.git</url>

  <author email="gwalck@techfak.uni-bielefeld.de">Guillaume Walck</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>meka_posture</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>control_msgs</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>trajectory_msgs</run_depend>
  <run_depend>meka_posture</run_depend>

  <export>

  </export>
</package>
