<?xml version="1.0"?>
<package>
  <name>meka_ros_publisher</name>
  <version>0.0.1</version>
  <description>The meka_ros_publisher package</description>
  <maintainer email="plueckin@techfak.uni-bielefeld.de">plueckin</maintainer>
  <license>BSD</license>
  <url type="website">https://github.com/CentralLabFacilities/meka-ros-pkg.git</url>

  <author email="plueckin@techfak.uni-bielefeld.de">plueckin</author>
  <author email="gwalck@techfak.uni-bielefeld.de">Guillaume Walck</author>
  <author email="smeyerz@techfak.uni-bielefeld.de">Sebastian M. z. Borgsen</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>rospy</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
