<package>
  <name>meka_velocity_smoother</name>
  <version>0.8.1</version>
  <description>
     Bound incoming velocity messages according to robot velocity and acceleration limits. Based on yocs_velocity_smoother by Jorge Santos Simon.
  </description>
  <author>plueckin</author>
  <maintainer email="plueckin@cit-ec.uni-bielefeld.de">plueckin</maintainer>
  <license>BSD</license>
  <url type="website">https://www.cit-ec.de/en/content/central-lab-facilities</url>
  <url type="repository">https://github.com/CentralLabFacilities/meka-ros-pkg</url>
  <url type="bugtracker">https://github.com/CentralLabFacilities/meka-ros-pkg/issues</url>
  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>ecl_threads</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>ecl_threads</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  
  <export>
    <nodelet plugin="${prefix}/plugins/nodelets.xml"/>
  </export>
</package>
